--- a/src/_metronic/i18n/messages/ru.json
+++ b/src/_metronic/i18n/messages/ru.json
@@ -7,6 +7,7 @@
   "MENU.FEATURES": "Опции",
   "MENU.APPS": "Приложения",
   "MENU.DASHBOARD": "Панель",
+  "MENU.SCHEDULE": "Расписание",
   "AUTH.GENERAL.OR": "Или",
   "AUTH.GENERAL.SUBMIT_BUTTON": "Принять",
   "AUTH.GENERAL.NO_ACCOUNT": "Нет аккаунта?",
