--- a/src/_metronic/i18n/messages/ru.json
+++ b/src/_metronic/i18n/messages/ru.json
@@ -7,7 +7,8 @@
   "MENU.FEATURES": "Опции",
   "MENU.APPS": "Приложения",
   "MENU.DASHBOARD": "Панель",
-  "MENU.SCHEDULE": "Расписание",
+  "MENU.SCHEDULE": "Расписание ВКС",
+  "MENU.ROOMS": "Залы",
   "AUTH.GENERAL.OR": "Или",
   "AUTH.GENERAL.SUBMIT_BUTTON": "Принять",
   "AUTH.GENERAL.NO_ACCOUNT": "Нет аккаунта?",
